# project-manager

./: .gitignore  Cargo.toml  README.md  Test.toml  bun.lockb  nuxt.config.ts  package.json
app/: app.vue
app/components/: Projects.vue  SearchInput.vue  Settings.vue
app/components/apps/: AppEntry.vue  AppIcon.vue  AppList.vue  SmallAppEntry.vue
app/components/project/: ProjectRunner.vue
app/composables/: useApps.ts  useProjects.ts  useSettings.ts
app/layouts/: default.vue
app/pages/: apps.vue  index.vue  settings.vue
components/: Projects.vue  Settings.vue
src/: App.vue  config.rs  display.rs  main.rs  project.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: apps.rs  fs.rs  lib.rs  projects.rs  settings.rs
src-tauri/src/commands/: apps.rs  fs.rs  mod.rs  projects.rs  settings.rs
src/commands/: add.rs  mod.rs
src/components/: Settings.vue
src/composable/: useSettings.ts
